# portail-rse-externe

./: .gitignore  README.md
docker/app/: Dockerfile
esg-api/: .gitignore  Caddyfile  Dockerfile  Procfile  Procfile.dev  README.md  Taskfile.yml  client.py  config.ini  deploy.sh  docker-compose.yml  example.env  pyproject.toml  setup-alma9.sh  uwsgi.ini
esg-api/app/: Dockerfile  app.py  config.ini  requirements.txt  uwsgi.ini
esg-api/app/librairies/: extract.py
esg-api/nginx/: Dockerfile  nginx.conf
esg-api/notebook/: detect_api_in_jupyter.ipynb
esg-api/src/: client.py
esg-api/src/app/: app.py
esg-api/src/app/helpers/: extract.py
esg-api/src/flask_app/: __init__.py  app.py  tasks.py
esg-api/src/helpers/: token.py
